--- a/trainer/app/package.json
+++ b/trainer/app/package.json
@@ -15,6 +15,7 @@
     "angular-translate": "^2.11.0",
     "angular-translate-loader-partial": "^2.11.0",
     "angular-ui-bootstrap": "^1.2.5",
+    "babel-core": "^5.8.33",
     "babel-runtime": "^5.8.38",
     "es6-module-loader": "^0.17.11",
     "http-server": "^0.9.0",
