--- a/trainer/app/package.json
+++ b/trainer/app/package.json
@@ -15,10 +15,15 @@
     "angular-translate": "^2.11.0",
     "angular-translate-loader-partial": "^2.11.0",
     "angular-ui-bootstrap": "^1.2.5",
+    "angular2": "^2.0.0-beta.12",
+    "es6-shim": "^0.35.0",
     "http-server": "^0.9.0",
     "jquery": "^1.11.1",
+    "reflect-metadata": "^0.1.2",
+    "rxjs": "^5.0.0-beta.2",
     "systemjs": "^0.19.23",
-    "traceur": "^0.0.104"
+    "traceur": "^0.0.104",
+    "zone.js": "^0.6.6"
   },
   "devDependencies": {
     "typescript": "^1.8.9",
