--- a/trainer/app/package.json
+++ b/trainer/app/package.json
@@ -19,6 +19,7 @@
     "es6-shim": "^0.35.0",
     "http-server": "^0.9.0",
     "jquery": "^1.11.1",
+    "ng2-translate": "^1.10.3",
     "reflect-metadata": "^0.1.2",
     "rxjs": "^5.0.0-beta.2",
     "systemjs": "^0.19.23",
