--- a/trainer/app/package.json
+++ b/trainer/app/package.json
@@ -16,6 +16,7 @@
     "angular-translate-loader-partial": "^2.11.0",
     "angular-ui-bootstrap": "^1.2.5",
     "angular2": "^2.0.0-beta.12",
+    "angular2-modal": "^0.1.1",
     "es6-shim": "^0.35.0",
     "http-server": "^0.9.0",
     "jquery": "^1.11.1",
